# bb

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
shell/: bb.bash  bb.zsh
src/: client.rs  config.rs  error.rs  main.rs  protocol.rs  server.rs
src/daemon/: lock.rs  mod.rs  runtime.rs  spawn.rs
src/ipc/: socket.rs  transport.rs
src/llm/: provider.rs
src/shell/: bash.rs  mod.rs  wrapper.rs  zsh.rs
tests/: daemon_lifecycle.rs  ipc_smoke.rs  shell_contract.rs
